--- a/files/app.json
+++ b/files/app.json
@@ -13,7 +13,8 @@
     "pages/travel-detail/travel-detail",
     "pages/reservation/reservation",
     "pages/sign/sign",
-    "pages/register/register"
+    "pages/register/register",
+    "pages/collection/collection"
   ],
   "window": {
     "backgroundTextStyle": "light",
